Fixed ugly fonts and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family:Arial;
-
     background-color: #444;
-    font-family: Open Sans; 
     height: 101%;
 
     background-image: url("../resources/mountainsbg.jpg");
@@ -12,6 +9,8 @@ body {
     background-position: 0 -400px;
     background-repeat: no-repeat;
     background-size: initial;
+    font-family: Sans-Serif;
+    font-size: 1em;
 }
 
 #Header h1 { color: #ffffff; font-family: 'Lato', sans-serif; font-size: 54px; font-weight: 300; line-height: 58px; margin: 0 0 58px; } 
@@ -263,18 +262,19 @@ h3 {
 
 #AboutMeContent h2 {
     padding: 0; margin: 0;
-    margin-top: -8px;
+    margin-top: 0px;
+    margin-bottom: 16px;
     color: #ffffff;
     font-family: 'Lato', sans-serif;
     font-weight: 320;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff; 
 }
 
 #AboutMeContent p { color: #ddd; padding: 0; margin: 0; }
 #AboutMeContent p a {
     text-decoration: none;
     color: #771;
-    border-bottom: 1px solid #111;
+    border-bottom: 1px solid #771;
 }
 
 @media only screen and (max-width: 720px) {
